tests/grammar/valid/v2_function_decl_with_multi_args.c
#include <stdint.h>
#include <stdio.h>

int main(int a, int) {}