tests/grammar/invalid/02_LexError_InvalidCharInStreamWithinProgram.c
#include <stdint.h>
#include <stdio.h>

#include <stdint.h>

void main() { $
}

